# formage

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  show.py
src/: main.cpp  test_test.cpp
src/apps/: bk.cpp  contours.cpp  dummy.cpp  example.cpp  example_all.cpp  find_contours.cpp  find_folding.cpp  grabcut.cpp  image_processing.cpp  prepro.cpp  remove_background.cpp  remove_background.puml  work.cpp
src/cmake/: compilerDefOpt.cmake  findDependencies.cmake
src/common/: CMakeLists.txt  load_files.h  my_core.cpp  my_core.h  my_img_pro.cpp  my_img_pro.h  my_welding.cpp  my_welding.h  other.cpp  other.h
src/tests/: data.h
